[tool.poetry]
name = "openyieldtables"
version = "0.1.0"
description = ""
authors = ["Tree.ly", "FMM"]
readme = "README.md"
packages = [{include = "openyieldtables", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
