[tool.poetry]
name = "openyieldtables"
version = "0.1.0"
description = ""
authors = ["Tree.ly", "FMM"]
readme = "README.md"
packages = [
  { include = "openyieldtables", from = "src" },
  { include = "src/openyieldtables/py.typed" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.6.4"
pandas = "^2.2.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=openyieldtables --cov-report term-missing --cov-report html"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
force_sort_within_sections = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
pre-commit = "^3.7.0"
mypy = "^1.9.0"
pandas-stubs = "^2.2.1.240316"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = { extras = ["python"], version = "^0.24.3" }

[tool.poetry.group.api.dependencies]
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
